# Sandals

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Rakefile  TODO.md
.github/workflows/: check_release_version.yml  run_cmake_inclusion_tests.yml  run_cpp_tests.yml
benchmarks/: Generator.mpl  Generator.mw
benchmarks/DynamicSystems/ChemAkzo/: ChemAkzo.hh  ChemAkzo.mpl
cmake/: Config.cmake.in  SandalsConfig.cmake.in  SandalsEigen3.cmake  SandalsGTest.cmake  SandalsMatplot.cmake  SandalsOptimist.cmake  SandalsRoot.cmake  SandalsVersion.cmake
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
docs/: _b_v_p_8hh.html  _b_v_p_8hh.js  _b_v_p_8hh__incl.map  _b_v_p_8hh__incl.md5  _b_v_p_8hh_source.html  _broyden_8hxx.html  _broyden_8hxx__dep__incl.map  _broyden_8hxx__dep__incl.md5  _broyden_8hxx_source.html  _chebyshev51_8hh.html  _chebyshev51_8hh.js  _chebyshev51_8hh__incl.map  _chebyshev51_8hh__incl.md5  _chebyshev51_8hh_source.html  _chebyshev51_8hxx.html  _chebyshev51_8hxx.js  _chebyshev51_8hxx__dep__incl.map  _chebyshev51_8hxx__dep__incl.md5  _chebyshev51_8hxx_source.html  _explicit_8hh.html  _explicit_8hh.js  _explicit_8hh__dep__incl.map  _explicit_8hh__dep__incl.md5  _explicit_8hh__incl.map  _explicit_8hh__incl.md5  _explicit_8hh_source.html  _explicit_8hxx.html  _explicit_8hxx.js  _explicit_8hxx__dep__incl.map  _explicit_8hxx__dep__incl.md5  _explicit_8hxx_source.html  _explicit_euler_8hh.html  _explicit_euler_8hh.js  _explicit_euler_8hh__incl.map  _explicit_euler_8hh__incl.md5  _explicit_euler_8hh_source.html  _explicit_euler_8hxx.html  _explicit_euler_8hxx.js  _explicit_euler_8hxx__dep__incl.map  _explicit_euler_8hxx__dep__incl.md5  (+720 more)
docs/html/: _broyden_8hxx.html  _broyden_8hxx.js  _broyden_8hxx_source.html  _implicit_8hxx.js  _implicit_8hxx__dep__incl.md5  _implicit_8hxx_source.html  _newton_8hxx.js  _newton_8hxx__incl.md5  _newton_8hxx_source.html  _nonlinear_solver_8hxx.html  _nonlinear_solver_8hxx.js  _nonlinear_solver_8hxx__dep__incl.map  _nonlinear_solver_8hxx_source.html  _r_k4_8hxx.html  _runge_kutta_8hxx.html  _runge_kutta_8hxx.js  _runge_kutta_8hxx_source.html  _sandals_8hh.html  _sandals_8hh.js  _sandals_8hh__incl.map  _sandals_8hh__incl.md5  _sandals_8hh_source.html  annotated.html  class_sandals_1_1_broyden-members.html  class_sandals_1_1_broyden.html  class_sandals_1_1_broyden.js  class_sandals_1_1_broyden__inherit__graph.map  class_sandals_1_1_explicit-members.html  class_sandals_1_1_explicit__inherit__graph.map  class_sandals_1_1_implicit-members.html  class_sandals_1_1_implicit.js  class_sandals_1_1_newton.html  class_sandals_1_1_newton__inherit__graph.map  class_sandals_1_1_nonlinear_solver.html  class_sandals_1_1_r_k4.js  class_sandals_1_1_r_k4__inherit__graph.md5  class_sandals_1_1_r_k4_tableau-members.html  class_sandals_1_1_r_k4_tableau__inherit__graph.md5  class_sandals_1_1_runge_kutta.html  class_sandals_1_1_runge_kutta.js  (+42 more)
docs/html/search/: all_0.js  all_4.js  all_7.js  all_b.js  all_c.js  all_d.js  classes_2.js  classes_5.js  defines_0.js  defines_1.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_4.js  typedefs_5.js  typedefs_8.js  variables_0.js  variables_1.js  variables_4.js  variables_5.js  variables_8.js
docs/include/doxygen-custom/: header.html
docs/markdown/: Broyden.md  Mainpage.md  Newton.md  NonlinearSolver.md  RungeKutta.md  Tableau.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_2.js  files_0.js  files_1.js  (+76 more)
include/: Sandals.hh
include/Sandals/: RungeKutta.hh  RungeKutta.hxx  Solution.hh  Solution.hxx  Tableau.hh  Tableau.hxx  TicToc.hh  TicToc.hxx
include/Sandals/NonlinearSolver/: Broyden.hxx  Newton.hxx  NonlinearSolver.hxx
include/Sandals/RungeKutta/: Chebyshev51.hh  ExplicitEuler.hh  Fehlberg45.hh  GaussLegendre2.hh  GaussLegendre4.hh  GaussLegendre6.hh  Heun2.hh  Heun3.hh  ImplicitEuler.hh  LobattoIIIA2.hh  MTE22.hh  RK4.hh  RadauIIA3.hh  RadauIIA5.hh  Ralston2.hh  Ralston3.hh  Ralston4.hh  RungeKutta.hxx  SSPIRK33.hh  SSPRK104.hh  SSPRK22.hh  SSPRK22star.hh  SSPRK33.hh  SSPRK42.hh  SSPRK43.hh  SSPRK93.hh  Solution.hxx  Tableau.hxx
include/Sandals/System/: Explicit.hh  (+7 more)
maple/: Build.mw  PackAndGo.mw  README.md
maple/installer/: Install.mw  Sandals_install_binary.mla
maple/lib/: Sandals.mpl  SandalsCodegen.mpl  SandalsUtils.mpl
maple/test/: Test.mw
tests/: CMakeLists.txt
tests/Broyden/: test_broyden.cc
tests/DynamicSystems/: OscillatorExplicit.hh  OscillatorImplicit.hh  OscillatorSemiExplicit.hh  SimplePendulumExplicit.hh  SimplePendulumImplicit.hh  SimplePendulumSemiExplicit.hh  SinCosExplicit.hh  SinCosImplicit.hh  SinCosSemiExplicit.hh  SinExplicit.hh  SinImplicit.hh  SinSemiExplicit.hh  ThreeBodyExplicit.hh  ThreeBodyImplicit.hh  ThreeBodySemiExplicit.hh
tests/DynamicSystems/ODEs/: SimplePendulumImplicit.hh  SimplePendulumSemiExplicit.hh  SinCosImplicit.hh  SinCosSemiExplicit.hh  ThreeBodyExplicit.hh  ThreeBodyImplicit.hh  ThreeBodySemiExplicit.hh
tests/DynamicalSystems/: OscillatorExplicit.hh  OscillatorImplicit.hh  SimplePendulumExplicit.hh  SimplePendulumImplicit.hh  SineExplicit.hh  SineImplicit.hh
tests/Explicit/: SimplePendulumExplicit.hh  test_explicit.cc
tests/Implicit/: SimplePendulumImplicit.hh  test_implicit.cc
tests/Newton/: test_newton.cc
tests/NonlinearSolver/: test_0.cc
tests/Order/: test_order.cc
tests/RungeKutta/: test_0.cc
tests/System/: OscillatorExplicit.hh  OscillatorImplicit.hh  SimplePendulumExplicit.hh  SimplePendulumImplicit.hh  test_system.cc
tests/Tableau/: test_tableau.cc
(+61 files in other folders)
